--- a/i18n/de.po
+++ b/i18n/de.po
@@ -3,9 +3,9 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 1.0.4\n"
-"POT-Creation-Date: 2024-02-17 10:15:06\n"
-"PO-Revision-Date: 2024-02-17 10:15:06\n"
+"Project-Id-Version: 1.1.0\n"
+"POT-Creation-Date: 2024-02-18 16:36:57\n"
+"PO-Revision-Date: 2024-02-18 16:36:57\n"
 "Last-Translator: Peter Triesberger\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
@@ -60,4 +60,7 @@ msgstr "Vorlage gespeichert"
 
 msgid "Templates plugin Online help"
 msgstr "Vorlagen-Plugin Online-Hilfe"
+
+msgid "nvhelp-en"
+msgstr "nvhelp-en"
 
