--- a/i18n/de.po
+++ b/i18n/de.po
@@ -3,15 +3,21 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 5.1.2\n"
-"POT-Creation-Date: 2025-04-15 14:02:14\n"
-"PO-Revision-Date: 2025-04-15 14:02:14\n"
+"Project-Id-Version: 5.2.0\n"
+"POT-Creation-Date: 2025-07-13 11:25:15\n"
+"PO-Revision-Date: 2025-07-13 11:25:15\n"
 "Last-Translator: Peter Triesberger\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
+
+msgid "1st Edit"
+msgstr "1. Überarbeitung"
+
+msgid "2nd Edit"
+msgstr "2. Überarbeitung"
 
 msgid "Cannot read file"
 msgstr "Kann Datei nicht lesen"
@@ -27,6 +33,12 @@ msgstr "Kapitel"
 
 msgid "Create from template..."
 msgstr "Aus Vorlage erzeugen..."
+
+msgid "Done"
+msgstr "Fertiggestellt"
+
+msgid "Draft"
+msgstr "Entwurf"
 
 msgid "File not found"
 msgstr "Datei nicht gefunden"
@@ -45,6 +57,9 @@ msgstr "Neuer Abschnitt"
 
 msgid "Open folder"
 msgstr "Ordner öffnen"
+
+msgid "Outline"
+msgstr "Gliederung"
 
 msgid "Save"
 msgstr "Speichern"
